drkns 26.10.2017 00:01:39 +0100 - build 5075

1. Продолжение 3503: передача состояния LastError / LastNtStatus в Message напрямую, а не через глобальные пременные.

drkns 25.10.2017 22:37:34 +0100 - build 5074

1. Группы сортировки работают только в режимах по имени и расширению, как раньше.

drkns 25.10.2017 19:02:49 +0100 - build 5073

1. Уточнение 5071 - OEM CP по умолчанию.

zg 25.10.2017 13:41:20 +0300 - build 5072

1. 0003524: FCTL_SETUSERSCREEN и диалоги.

drkns 24.10.2017 20:41:53 +0100 - build 5071

1. Уточнение 5067 - отломалась логика "если не нашли правильный lng и английский тоже не нашли - используем что попало".

drkns 23.10.2017 20:20:30 +0100 - build 5070

1. Не работал запрос прав при копировании симлинков.

2. Пара мелочей.

zg 20.10.2017 17:09:22 +0300 - build 5069

1. с форума: Ошибка перерисовки диалога в Просмотрщике.

drkns 19.10.2017 20:23:16 +0100

1. Исправлена сборка в gcc.

2. Поскольку я уже три недели как сломал поддержку gcc 5 и никто не жаловался - минимальная версия теперь 6.0.

3. Для VS2015 проверяется наличие Update 3.

drkns 19.10.2017 01:07:23 +0100 - build 5068

1. Для внутреннего представления времени по возможности используются стандартные time_point и duration вместо FILETIME и голых чисел. Изменения масштабные, возможны баги.

2. Унифицирован формат фильтров и групп раскраски/сортировки, ибо слишком много копипасты.
   В целях совместимости старый формат пока что поддерживается в обе стороны (и читается, и пишется).
   Через некоторое время поддержка будет убрана.

drkns 18.10.2017 00:47:15 +0100 - build 5067

1. С форума: некорректное отображение помощи (а на самом деле чтение - см. "четное количество багов"), если её язык не совпадает с текущим.

zg 16.10.2017 17:28:26 +0300 - build 5066

1. 0002760: Отдельные макрообласти для GRABBER, HMENU, DESKTOP.

2. 0002761: Отдать в АПИ константы WTYPE_GRABBER, WTYPE_HMENU, WTYPE_DESKTOP, WTYPE_FINDFOLDER.

zg 15.10.2017 16:22:28 +0300 - build 5065
