@@ -1,3 +1,9 @@
+drkns 26.10.2017 20:06:28 +0100 - build 5076
+
+1. С форума: падение на операции удаления с повышением прав.
+
+2. Кеширование результатов LookupPrivilegeValue.
+
 drkns 26.10.2017 00:01:39 +0100 - build 5075
 
 1. Продолжение 3503: передача состояния LastError / LastNtStatus в Message напрямую, а не через глобальные пременные.
